kubernetes/apps/network/nginx/internal/services/proxmox/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: proxmox
  namespace: network
subsets:
- addresses:
  - ip: 10.90.1.1
  ports:
  - name: http
    port: 8006
    protocol: TCP
  - name: spice-console
    port: 3128
    protocol: TCP
