kubernetes/apps/network/nginx/internal/services/proxmox/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: proxmox
  namespace: networking
spec:
  type: ExternalName
  externalName: nexus.${SECRET_DOMAIN}
  ports:
    - name: http
      port: &port 8006
      protocol: TCP
      targetPort: *port
